<resources>
    <string name="app_name">hdonline</string>
    <!-- Tieu de cua tab-->
    <string name="title_noi_bat">Mới nhất</string>
    <string name="title_xem_nhieu_nhat">Xem nhiều</string>
    <string name="title_timkiem">Tìm kiếm</string>
    <string name="title_muc_ua_thich">Trailer</string>
    <string name="title_them">Thêm</string>
    <!-- item listView -->
    <string name="count">lần</string>
    <string name="base_url">http://hdonline.vn/index.php</string>
    <string name="not_connect_internet">Không có kết nối internet!</string>
    <string name="not_json_data">Đang cập nhật</string>
    <string name="count_view"><b>%s</b> %s lần</string>
    
    <!-- more -->
    <string name="label_edit">Sửa</string>
    <string name="lable_login">Đăng nhập</string>
    <string name="label_recent">Gần đây nhất</string>
    <string name="label_top_rated">Bảng xếp hạng</string>
    <string name="label_info_acc">Thông tin tài khoản</string>
   <string name="label_notification">Thông báo</string>
    <string name="label_exit">Thoát</string>
    <string name="label_guide">Hướng dẫn</string>
    <string name="label_movie_like">Phim yêu thích</string>
    <string name="label_register">Đăng ký</string>
    <string name="label_playlist">Danh sách phát</string>
    
    <!-- review more -->
    <string name="lablel_tody">Hôm nay</string>
    <string name="label_week">Tuần này</string>
    <string name="label_all">Tất cả</string>
    
    <!--  label -->
    <string-array name="byorder_abel">
		<item>Xếp theo ngày</item>
		<item>Xếp theo năm</item>
		<item>Xếp theo tên</item>
		<item>Xếp theo lượt xem</item>
		<item>Xếp theo bình chọn</item>
		<item>Xếp theo điểm IMDB</item>
	</string-array>

	<!-- by order value -->
	<string-array name="byorder_value">
		<item>year</item>
		<item>name</item>
		<item>view</item>
		<item>rate</item>
		<item>imdb</item>	
	</string-array>  
	
		<!-- by sort albel -->
	<string-array name="bysort_labelbysort_labelbysort_labelbysort_label">
		<item>Tăng Dần</item>
		<item>Giản dần</item>
	</string-array>  
	
		<!-- by sort albel -->
	<string-array name="bysort_value">
		<item>asc</item>
		<item>desc</item>
	</string-array> 
	<!-- login -->
	<string name="login_url">http://hdonline.vn/thanh-vien/dang-nhap.html</string>
	<string name="edit_empty">Trường này chưa được nhập</string>
	<string name="new_account">Tạo tài khoản mới</string>
	<string name="forgot_password">Quên mật khẩu</string>
	<string name="security">Mã bảo vệ</string>
	<string name="username">Tên đăng nhập</string>
	<string name="password">Mật khẩu</string>
	<string name="login">Đăng nhập</string>
	<string name="connecting">Đang kết nối...</string>
	
	<!-- forgot password -->
	<string name="title_forgot_password">Quên mật khẩu</string>
	<string name="forgot_url">http://hdonline.vn/thanh-vien/quen-mat-khau.html</string>
	<string name="email">Email đăng ký</string>
	<string name="get_password">Lấy Mật Khẩu</string>
	<string name="security_url">http://hdonline.vn/security.php</string>
	
	<!-- change pass -->
	<string name="title_change_pass">Đổi mật khẩu</string>
	<string name="old_pass">Mật khẩu cũ</string>
	<string name="new_pass">Mật khẩu mới</string>
	<string name="confirm_new_pass">Xác nhận mật khẩu mới</string>
	<!-- register -->
	<string name="title_register">Đăng ký</string>
	<string name="regis_url">http://hdonline.vn/thanh-vien/dang-ky.html</string>
	<string name="confirm_password">Nhập lại mật khẩu</string>
	<string name="fullname">Tên đầy đủ</string>
	<string name="year">Năm sinh</string>
	<string name="gender">Giới tính</string>
	<string name="phone">Số điện thoại</string>
	<string name="agree">Đồng ý điều khoản</string>
	<string name="male">Nam</string>
	<string name="female">Nữ</string>
	<string name="confirm_pass_wrong">Mật khẩu không trùng</string>
	<string name="email_address_not_valid">Địa chỉ email không đúng</string>
	<string name="not_agree">Bạn chưa đồng ý với điều khoản của chúng tôi</string>
	
	<!-- detailfilm -->
	<string name="like">Ưa thích</string>
	<string name="related_videos">Video liên quan</string>
	<string name="back">Quay lại</string>
	<string name="list_not_data">Không có danh sách</string>
	
	<!-- searchfilm -->
	<string name="link_search_movies">http://hdonline.vn/tim-kiem/</string>
	<string name="search">Tìm kiếm</string>
	<string name="list_new_film">Danh sách phim mới</string>
	<string name="movies">Phim lẻ</string>
	<string name="drama">Phim bộ</string>
	<string name="movie_theaters">Phim rạp</string>
	<string name="enter_filmname">Nhập tên phim</string>
	<string name="view_more">Thêm kết quả</string>
	
	<!-- dialog -->
	<string name="OK">Đồng ý</string>
	<string name="cancel">Hủy bỏ</string>
	<string name="you_want_exit">Bạn có muốn thoát ứng dụng?</string>
	
	<!-- dialog change sub -->
	<string name="text_font">Font chữ</string>
	<string name="text_size">Cỡ Chữ</string>
	<string name="text_background">Nền chữ</string>
	<string name="text_color">Màu chữ</string>
	<string name="text_border_color">Viền chữ</string>
	<string name="label_default">Mặc định</string>
	<string name="label_completed">Hoàn tất</string>
	<string name="label_plus">Tăng</string>
	<string name="label_sub">Giảm</string>
	<string name="label_show_hide">Hiện/Ẩn</string>
	
	<!-- info movies -->
	<string name="info">Thông tin</string>
	<string name="comment">Bình luận</string>
	<string name="noi_dung_phim">Nội dung phim</string>
	
	<!-- link -->
	<string name="link_like_movie">http://hdonline.vn/index.php</string>
	<string name="link_add_movie">http://hdonline.vn/index.php</string>
	<string name="link_img_poster">hdonline.vn/skin/new-tmp/img/poster.jpg</string>
</resources>
