<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroung_login" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="1"
            android:scrollHorizontally="true"
            android:text="@string/search"
            android:background="@drawable/top_bar"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/search_progress_update"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/relayout_toolbar_top_message_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >
        <EditText
            android:id="@+id/edit_filmname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/enter_filmname"
        	android:background="@drawable/background_edittext"
            android:lines="1" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_filmname"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/edit_filmname"
            android:background="@drawable/button_search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/movies"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/drama"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_movie_theaters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/movie_theaters"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/list_new_film"
        android:textSize="15dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="-10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_top_list_detail" />

    <ListView
        android:id="@+id/list_search_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
    </ListView>
 <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/list_search_film"
        android:background="@drawable/background_bottom_list_detail">
	    <TextView android:id="@+id/txt_list_search_not_data"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/list_not_data"
	        android:textColor="@android:color/black"
	        android:paddingBottom="10dp"
	        android:gravity="center"/>
	</LinearLayout>
</LinearLayout>