<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_login"
    android:orientation="vertical" >
        <LinearLayout 
        android:id="@+id/toolbar_top_info_movie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/top_bar">
        <Button android:id="@+id/btn_info_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_blue"/>
        <TextView 
            android:id="@+id/title_info_film"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textStyle="bold"/>
        
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    android:gravity="center_horizontal">
	    <Button android:id="@+id/btn_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/info"
	        android:background="@drawable/btn_info"/>
	    <Button android:id="@+id/btn_comment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="-1dp"
	        android:background="@drawable/btn_comment"
	        android:text="@string/comment"/>
	</LinearLayout>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="none">
	<TextView android:id="@+id/txt_info"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/background_movie_detail"/>
	</ScrollView>
</LinearLayout>